docs/apim/4.11/SUMMARY.md
# Table of contents

* [Introduction](README.md)
  * [Core Concepts](readme/core-concepts.md)
  * [Enterprise Edition](readme/enterprise-edition.md)
    * [Enterprise Edition installation](readme/enterprise-edition-installation.md)
    * [Enterprise Edition licensing](readme/enterprise-edition-licensing.md)
  * [Integrations](readme/integrations.md)
  * [Community Forum](readme/community-forum.md)
  * [Contribute to APIM](readme/contribute-to-apim.md)
  * [API Fundamentals](readme/api-fundamentals/README.md)
    * [API Basics](readme/api-fundamentals/api-basics.md)
    * [Web APIs](readme/api-fundamentals/web-apis.md)
    * [Categorizing Web APIs](readme/api-fundamentals/categorizing-web-apis.md)
  * [Glossary](readme/glossary.md)
* [Getting Started](getting-started/README.md)
  * [Next-Gen Cloud Free Trial](https://eu.cloud.gravitee.io/)
  * [Fully self-hosted installation with Vanilla Kubernetes](getting-started/vanilla-kubernetes.md)
  * [Fully self-hosted installation with Docker](getting-started/local-install-with-docker.md)
  * [Create & Publish Your First API](getting-started/create-and-publish-your-first-api/README.md)
    * [Create an API](getting-started/create-and-publish-your-first-api/create-an-api.md)
    * [Add Security](getting-started/create-and-publish-your-first-api/add-security.md)
    * [Add a Policy](getting-started/create-and-publish-your-first-api/add-a-policy.md)
    * [Add API Documentation](getting-started/create-and-publish-your-first-api/add-api-documentation.md)
    * [Publish your API](getting-started/create-and-publish-your-first-api/publish-your-api.md)
  * [Hybrid Install with Docker](getting-started/hybrid-install-with-docker.md)
* [Hybrid Installation & Configuration Guides](hybrid-installation-and-configuration-guides/README.md)
  * [Next-Gen Cloud](hybrid-installation-and-configuration-guides/next-gen-cloud/README.md)
    * [Docker](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/README.md)
      * [Docker CLI](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/docker-cli.md)
      * [Docker Compose](hybrid-installation-and-configuration-guides/next-gen-cloud/docker/docker-compose.md)
    * [Kubernetes](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/README.md)
      * [Vanilla Kubernetes](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/vanilla-kubernetes/README.md)
        * [Deploy a Hybrid Gateway with Redis Sentinel](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/vanilla-kubernetes/deploy-a-hybrid-gateway-with-redis-sentinel.md)
      * [AWS EKS](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/aws-eks.md)
      * [Azure AKS](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/azure-aks.md)
      * [GCP GKE](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/gcp-gke.md)
      * [OpenShift](hybrid-installation-and-configuration-guides/next-gen-cloud/kubernetes/openshift.md)
    * [RPM](hybrid-installation-and-configuration-guides/next-gen-cloud/rpm.md)
    * [.ZIP](hybrid-installation-and-configuration-guides/next-gen-cloud/.zip.md)
    * [Generate a New Cloud Token](hybrid-installation-and-configuration-guides/next-gen-cloud/generate-a-new-cloud-token.md)
    * [Delete a Hybrid Gateway](hybrid-installation-and-configuration-guides/next-gen-cloud/delete-a-hybrid-gateway.md)
    * [Link to a Hybrid Gateway](hybrid-installation-and-configuration-guides/next-gen-cloud/link-to-a-hybrid-gateway.md)
  * [Classic Cloud](hybrid-installation-and-configuration-guides/classic-cloud/README.md)
    * [Docker](hybrid-installation-and-configuration-guides/classic-cloud/docker/README.md)
      * [Docker Compose](hybrid-installation-and-configuration-guides/classic-cloud/docker/docker-compose.md)
    * [Kubernetes](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/README.md)
      * [Vanilla Kubernetes](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/vanilla-kubernetes.md)
      * [GCP GKE](hybrid-installation-and-configuration-guides/classic-cloud/kubernetes/gcp-gke.md)
    * [.ZIP](hybrid-installation-and-configuration-guides/classic-cloud/.zip.md)
    * [Cloud Certificate Renewal](hybrid-installation-and-configuration-guides/classic-cloud/cloud-certificate-renewal.md)
  * [Proxy Configuration](hybrid-installation-and-configuration-guides/proxy-configuration/README.md)
    * [Hybrid Gateway Proxy Configuration](hybrid-installation-and-configuration-guides/proxy-configuration/hybrid-gateway-proxy-configuration.md)
    * [System Proxy for Backend APIs](hybrid-installation-and-configuration-guides/proxy-configuration/system-proxy-for-backend-apis.md)
    * [Configure Cloud Gateway Client](hybrid-installation-and-configuration-guides/proxy-configuration/configure-cloud-gateway-client.md)
* [Self-Hosted Installation Guides](self-hosted-installation-guides/README.md)
  * [Docker](self-hosted-installation-guides/docker/README.md)
    * [Docker Compose](self-hosted-installation-guides/docker/docker-compose.md)
    * [Docker CLI](self-hosted-installation-guides/docker/docker-cli.md)
    * [Customize your Installation](self-hosted-installation-guides/docker/customize-your-installation.md)
  * [Kubernetes](self-hosted-installation-guides/kubernetes/README.md)
    * [Vanilla Kubernetes](self-hosted-installation-guides/kubernetes/vanilla-kubernetes/README.md)
      * [Deploy APIM with Kubernetes Manifest](self-hosted-installation-guides/kubernetes/vanilla-kubernetes/deploy-apim-with-kubernetes-manifest.md)
    * [AWS EKS](self-hosted-installation-guides/kubernetes/aws-eks.md)
    * [Azure AKS](self-hosted-installation-guides/kubernetes/azure-aks.md)
    * [GCP GKE](self-hosted-installation-guides/kubernetes/gcp-gke.md)
    * [OpenShift](self-hosted-installation-guides/kubernetes/openshift.md)
  * [RPM](self-hosted-installation-guides/rpm/README.md)
    * [Troubleshooting](self-hosted-installation-guides/rpm/troubleshooting.md)
  * [.ZIP](self-hosted-installation-guides/.zip.md)
  * [Multi-tenancy](self-hosted-installation-guides/multi-tenancy.md)
  * [Proxy Configuration](self-hosted-installation-guides/proxy-configuration/README.md)
    * [System Proxy for Backend APIs](self-hosted-installation-guides/proxy-configuration/system-proxy-for-backend-apis.md)
* [Upgrade Guides](upgrade-guides/README.md)
  * [Update the Connection to Cloud](upgrade-guides/update-the-connection-to-cloud.md)
  * [APIM 4.4.+ & Hybrid Gateways](upgrade-guides/apim-4.4.+-and-hybrid-gateways.md)
  * [Upgrade with RPM](upgrade-guides/upgrade-with-rpm.md)
  * [MongoDB Index Management](upgrade-guides/mongodb-index-management.md)
  * [APIM 4.9 Elasticsearch Index Template Changes](upgrade-guides/apim-4.9-elasticsearch-index-template-changes.md)
  * [Migrate v1 APIs to v2](upgrade-guides/migrate-v1-apis-to-v2.md)
* [How-To Guides](how-to-guides/README.md)
  * [Use Case Tutorials](how-to-guides/use-case-tutorials/README.md)
    * [Create & Publish Your First API](getting-started/create-and-publish-your-first-api/README.md)
    * [Rate Limit REST APIs](how-to-guides/use-case-tutorials/rate-limit-rest-apis.md)
    * [Configure JWT Security](how-to-guides/use-case-tutorials/configure-jwt-security.md)
    * [Add RBAC to your JWT Plan](how-to-guides/use-case-tutorials/add-rbac-to-your-jwt-plan.md)
    * [Aggregating multiple responses](how-to-guides/use-case-tutorials/aggregating-multiple-responses.md)
    * [Configure DCR](how-to-guides/use-case-tutorials/configure-dcr.md)
    * [Secure and Expose gRPC Services](how-to-guides/use-case-tutorials/secure-and-expose-grpc-services.md)
    * [Expose SOAP Webservices as REST APIs](how-to-guides/use-case-tutorials/expose-soap-webservices-as-rest-apis.md)
    * [Create and Publish an API Using the Management API](how-to-guides/use-case-tutorials/create-and-publish-an-api-using-the-management-api.md)
    * [Create Applications and Subscriptions Using the Management API](how-to-guides/use-case-tutorials/create-applications-and-subscriptions-using-the-management-api.md)
    * [Connect to an Endpoint Using SSE](how-to-guides/use-case-tutorials/connect-to-an-endpoint-using-sse.md)
    * [Implement BFF pattern (with a Shared Policy Group)](how-to-guides/use-case-tutorials/implement-bff-pattern-with-a-shared-policy-group.md)
    * [Configure an MCP-Proxy with the OAuth plan and Entra ID](how-to-guides/use-case-tutorials/secure-a-mcp-proxy-with-entra-id-oauth.md)
    * [Monitor APIM with Prometheus and Grafana using Docker Compose](how-to-guides/use-case-tutorials/monitor-apim-with-prometheus-and-grafana.md)
* [Configure & Manage the Platform](configure-and-manage-the-platform/README.md)
  * [Gravitee Gateway](configure-and-manage-the-platform/gravitee-gateway/README.md)
    * [Proxy](configure-and-manage-the-platform/gravitee-gateway/proxy.md)
    * [Services](configure-and-manage-the-platform/gravitee-gateway/services.md)
    * [Dictionaries](configure-and-manage-the-platform/gravitee-gateway/dictionaries.md)
    * [Alerts](configure-and-manage-the-platform/gravitee-gateway/alerts.md)
    * [Notifications](configure-and-manage-the-platform/gravitee-gateway/notifications.md)
    * [Gateway Internal API](configure-and-manage-the-platform/gravitee-gateway/gateway-internal-api.md)
    * [Sharding Tags](configure-and-manage-the-platform/gravitee-gateway/sharding-tags.md)
    * [Tenants](configure-and-manage-the-platform/gravitee-gateway/tenants.md)
    * [Header IDs](configure-and-manage-the-platform/gravitee-gateway/header-ids.md)
    * [Gateway Cluster sync with Redis](configure-and-manage-the-platform/gravitee-gateway/gateway-cluster-sync-with-redis/README.md)
      * [Gateway Cluster sync with Redis using Docker](configure-and-manage-the-platform/gravitee-gateway/gateway-cluster-sync-with-redis/gateway-cluster-sync-with-redis-using-docker.md)
      * [Gateway Cluster sync with Redis using Kubernetes (Helm)](configure-and-manage-the-platform/gravitee-gateway/gateway-cluster-sync-with-redis/gateway-cluster-sync-with-redis-using-kubernetes-helm.md)
    * [Gateway Configuration for mTLS Certificate Management](configure-and-manage-the-platform/gravitee-gateway/gateway-configuration-for-mtls-certificate-management.md)
    * [Request Path Handling](configure-and-manage-the-platform/gravitee-gateway/request-path-handling.md)
  * [Management API](configure-and-manage-the-platform/management-api/README.md)
    * [MAPI Internal API](configure-and-manage-the-platform/management-api/mapi-internal-api.md)
    * [mTLS certificate management API reference](configure-and-manage-the-platform/management-api/mtls-certificate-management-api-reference.md)
    * [Settings](configure-and-manage-the-platform/management-api/settings.md)
    * [Cleanup Services](configure-and-manage-the-platform/management-api/cleanup-services.md)
  * [Manage Organizations & Environments](configure-and-manage-the-platform/manage-organizations-and-environments/README.md)
    * [Authentication](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/README.md)
      * [Gravitee Access Management](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/gravitee-access-management.md)
      * [Authentication Providers](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/authentication-providers.md)
      * [Social Providers](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/social-providers.md)
      * [OpenID Connect](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/openid-connect.md)
      * [Microsoft Entra ID](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/microsoft-entra-id.md)
      * [Roles and Groups Mapping](configure-and-manage-the-platform/manage-organizations-and-environments/authentication/roles-and-groups-mapping.md)
    * [User Management](configure-and-manage-the-platform/manage-organizations-and-environments/user-management.md)
    * [Create a service account](configure-and-manage-the-platform/manage-organizations-and-environments/create-a-service-account.md)
    * [Applications](configure-and-manage-the-platform/manage-organizations-and-environments/applications.md)
    * [APIM Console](configure-and-manage-the-platform/manage-organizations-and-environments/apim-console.md)
    * [Developer Portal](configure-and-manage-the-platform/manage-organizations-and-environments/developer-portal.md)
    * [SMTP Configuration](configure-and-manage-the-platform/manage-organizations-and-environments/smtp-configuration.md)
    * [CORS Configuration](configure-and-manage-the-platform/manage-organizations-and-environments/cors-configuration.md)
    * [Configuring Portal and Console deployments](configure-and-manage-the-platform/manage-organizations-and-environments/configuring-portal-and-console-deployments.md)
    * [Support](configure-and-manage-the-platform/manage-organizations-and-environments/support.md)
  * [Debug logging](configure-and-manage-the-platform/debug-logging.md)
  * [Context-aware logging](configure-and-manage-the-platform/logging-infrastructure.md)
  * [Node logging configuration](configure-and-manage-the-platform/node-logging-configuration.md)
* [Create & Configure APIs](create-and-configure-apis/README.md)
  * [Gravitee API Definitions](create-and-configure-apis/gravitee-api-definitions/README.md)
    * [Entrypoint Connect phase overview](create-and-configure-apis/gravitee-api-definitions/native-api-phases.md)
    * [A2A Proxy API Type Overview](create-and-configure-apis/gravitee-api-definitions/a2a-proxy-api-type.md)
    * [v2 and v4 API Comparison](create-and-configure-apis/gravitee-api-definitions/v2-and-v4-api-comparison.md)
    * [Execution Engine](create-and-configure-apis/gravitee-api-definitions/execution-engine.md)
  * [Create APIs](create-and-configure-apis/create-apis/README.md)
    * [v4 API Creation Wizard](create-and-configure-apis/create-apis/v4-api-creation-wizard.md)
    * [v2 API Creation Wizard](create-and-configure-apis/create-apis/v2-api-creation-wizard.md)
    * [Import APIs](create-and-configure-apis/create-apis/import-apis.md)
    * [Migrate APIs](create-and-configure-apis/create-apis/migrate-apis.md)
    * [Search for APIs in the Console](create-and-configure-apis/create-apis/search-for-apis-in-the-console.md)
    * [Promote APIs](create-and-configure-apis/create-apis/promote-apis.md)
  * [Configure v4 APIs](create-and-configure-apis/configure-v4-apis/README.md)
    * [General Settings](create-and-configure-apis/configure-v4-apis/general-settings.md)
    * [API Lifecycle States](create-and-configure-apis/configure-v4-apis/api-lifecycle-states.md)
    * [Entrypoints](create-and-configure-apis/configure-v4-apis/entrypoints/README.md)
      * [HTTP GET](create-and-configure-apis/configure-v4-apis/entrypoints/http-get.md)
      * [HTTP POST](create-and-configure-apis/configure-v4-apis/entrypoints/http-post.md)
      * [Server-Sent Events](create-and-configure-apis/configure-v4-apis/entrypoints/server-sent-events.md)
      * [Webhook](create-and-configure-apis/configure-v4-apis/entrypoints/webhook.md)
      * [WebSocket](create-and-configure-apis/configure-v4-apis/entrypoints/websocket.md)
    * [Endpoints](create-and-configure-apis/configure-v4-apis/endpoints/README.md)
      * [Azure Service Bus](create-and-configure-apis/configure-v4-apis/endpoints/azure-service-bus.md)
      * [JMS](create-and-configure-apis/configure-v4-apis/endpoints/jms.md)
      * [Kafka](create-and-configure-apis/configure-v4-apis/endpoints/kafka.md)
      * [Mock](create-and-configure-apis/configure-v4-apis/endpoints/mock.md)
      * [MQTT5](create-and-configure-apis/configure-v4-apis/endpoints/mqtt5.md)
      * [Solace](create-and-configure-apis/configure-v4-apis/endpoints/solace.md)
      * [RabbitMQ](create-and-configure-apis/configure-v4-apis/endpoints/rabbitmq.md)
    * [User Permissions](create-and-configure-apis/configure-v4-apis/user-permissions.md)
    * [Quality of Service](create-and-configure-apis/configure-v4-apis/quality-of-service.md)
    * [Response Templates](create-and-configure-apis/configure-v4-apis/response-templates.md)
    * [CORS](create-and-configure-apis/configure-v4-apis/cors.md)
    * [Health-checks](create-and-configure-apis/configure-v4-apis/health-checks.md)
    * [Documentation](create-and-configure-apis/configure-v4-apis/documentation.md)
    * [Audit Logs](create-and-configure-apis/configure-v4-apis/audit-logs.md)
    * [Version History](create-and-configure-apis/configure-v4-apis/version-history.md)
    * [Load balancing and failover](create-and-configure-apis/configure-v4-apis/load-balancing-and-failover.md)
  * [Configure v2 APIs](create-and-configure-apis/configure-v2-apis/README.md)
    * [General Settings](create-and-configure-apis/configure-v2-apis/general-settings.md)
    * [Proxy Settings](create-and-configure-apis/configure-v2-apis/proxy-settings.md)
    * [Load-balancing, Failover, & Health-checks](create-and-configure-apis/configure-v2-apis/load-balancing-failover-and-health-checks.md)
    * [Service Discovery](create-and-configure-apis/configure-v2-apis/service-discovery.md)
    * [User and Group Access](create-and-configure-apis/configure-v2-apis/user-and-group-access.md)
    * [Documentation](create-and-configure-apis/configure-v2-apis/documentation.md)
  * [Apply Policies](create-and-configure-apis/apply-policies/README.md)
    * [v4 API Policy Studio](create-and-configure-apis/apply-policies/v4-api-policy-studio.md)
    * [v2 API Policy Studio](create-and-configure-apis/apply-policies/v2-api-policy-studio.md)
    * [Debug Mode](create-and-configure-apis/apply-policies/debug-mode.md)
    * [Shared Policy Groups](create-and-configure-apis/apply-policies/shared-policy-groups.md)
    * [Resources](create-and-configure-apis/apply-policies/resources.md)
    * [Custom Policies](create-and-configure-apis/apply-policies/custom-policies.md)
    * [Policy Reference](create-and-configure-apis/apply-policies/policy-reference/README.md)
      * [AI - Model Text Classification - Model and Performance Metrics](create-and-configure-apis/apply-policies/policy-reference/ai-model-text-classification-model-reference-and-performance-metrics.md)
      * [AI - Semantic Caching](create-and-configure-apis/apply-policies/policy-reference/ai-semantic-caching.md)
      * [Kafka Governance Rules Policies](create-and-configure-apis/apply-policies/policy-reference/kafka-governance-rules-policies.md)
      * [Kafka Message Encryption & Decryption](create-and-configure-apis/apply-policies/policy-reference/kafka-message-encryption-decryption-policy-reference.md)
      * [Native IP filtering](create-and-configure-apis/apply-policies/policy-reference/native-ip-filtering.md)
      * [Test](create-and-configure-apis/apply-policies/policy-reference/test.md)
      * [AI - MCP ACL](create-and-configure-apis/apply-policies/policy-reference/ai-mcp-acl.md)
      * [AI - Prompt Guard Rails](create-and-configure-apis/apply-policies/policy-reference/ai-prompt-guard-rails.md)
      * [AI - Prompt Token Tracking](create-and-configure-apis/apply-policies/policy-reference/ai-prompt-token-tracking.md)
      * [AI - Token Rate Limit](create-and-configure-apis/apply-policies/policy-reference/ai-token-rate-limit.md)
      * [API Key](create-and-configure-apis/apply-policies/policy-reference/api-key.md)
      * [Assign Attributes](create-and-configure-apis/apply-policies/policy-reference/assign-attributes.md)
      * [Assign Content](create-and-configure-apis/apply-policies/policy-reference/assign-content.md)
      * [Assign Metrics](create-and-configure-apis/apply-policies/policy-reference/assign-metrics.md)
      * [Avro to JSON](create-and-configure-apis/apply-policies/policy-reference/avro-to-json.md)
      * [Avro to Protobuf](create-and-configure-apis/apply-policies/policy-reference/avro-to-protobuf.md)
      * [AWS Lambda](create-and-configure-apis/apply-policies/policy-reference/aws-lambda.md)
      * [Basic Authentication](create-and-configure-apis/apply-policies/policy-reference/basic-authentication.md)
      * [Cache](create-and-configure-apis/apply-policies/policy-reference/cache.md)
      * [Circuit Breaker](create-and-configure-apis/apply-policies/policy-reference/circuit-breaker.md)
      * [CloudEvents](create-and-configure-apis/apply-policies/policy-reference/cloudevents.md)
      * [Custom Query Parameters Parser](create-and-configure-apis/apply-policies/policy-reference/custom-query-parameters-parser.md)
      * [Data Cache](create-and-configure-apis/apply-policies/policy-reference/data-cache.md)
      * [Data Logging Masking](create-and-configure-apis/apply-policies/policy-reference/data-logging-masking.md)
      * [Dynamic Routing](create-and-configure-apis/apply-policies/policy-reference/dynamic-routing.md)
      * [Generate HTTP Signature](create-and-configure-apis/apply-policies/policy-reference/generate-http-signature.md)
      * [Generate JWT](create-and-configure-apis/apply-policies/policy-reference/generate-jwt.md)
      * [GeoIP Filtering](create-and-configure-apis/apply-policies/policy-reference/geoip-filtering.md)
      * [GraphQL Rate Limit](create-and-configure-apis/apply-policies/policy-reference/graphql-rate-limit.md)
      * [Groovy](create-and-configure-apis/apply-policies/policy-reference/groovy.md)
      * [HTML to JSON](create-and-configure-apis/apply-policies/policy-reference/html-to-json.md)
      * [HTTP Callout](create-and-configure-apis/apply-policies/policy-reference/http-callout.md)
      * [HTTP Redirect](create-and-configure-apis/apply-policies/policy-reference/http-redirect.md)
      * [HTTP Signature](create-and-configure-apis/apply-policies/policy-reference/http-signature.md)
      * [InterOPS](create-and-configure-apis/apply-policies/policy-reference/interops.md)
      * [Interrupt](create-and-configure-apis/apply-policies/policy-reference/interrupt.md)
      * [IP Filtering](create-and-configure-apis/apply-policies/policy-reference/ip-filtering.md)
      * [JavaScript](create-and-configure-apis/apply-policies/policy-reference/javascript.md)
      * [JavaScript Policy (New)](create-and-configure-apis/apply-policies/policy-reference/javascript-policy-new-reference.md)
      * [JSON to JSON](create-and-configure-apis/apply-policies/policy-reference/json-to-json.md)
      * [JSON to XML](create-and-configure-apis/apply-policies/policy-reference/json-to-xml.md)
      * [JSON Threat Protection](create-and-configure-apis/apply-policies/policy-reference/json-threat-protection.md)
      * [JSON Validation](create-and-configure-apis/apply-policies/policy-reference/json-validation.md)
      * [JWS Validator](create-and-configure-apis/apply-policies/policy-reference/jws-validator.md)
      * [JWT Validator](create-and-configure-apis/apply-policies/policy-reference/jwt-validator.md)
      * [Kafka ACL](create-and-configure-apis/apply-policies/policy-reference/kafka-acl.md)
      * [Kafka Message Filtering](create-and-configure-apis/apply-policies/policy-reference/kafka-message-filtering.md)
      * [Kafka Offloading](create-and-configure-apis/apply-policies/policy-reference/kafka-offloading.md)
      * [Kafka Quota](create-and-configure-apis/apply-policies/policy-reference/kafka-quota.md)
      * [Kafka Topic Mapping](create-and-configure-apis/apply-policies/policy-reference/kafka-topic-mapping.md)
      * [Kafka Transform Key](create-and-configure-apis/apply-policies/policy-reference/kafka-transform-key.md)
      * [Keyless](create-and-configure-apis/apply-policies/policy-reference/keyless.md)
      * [Latency](create-and-configure-apis/apply-policies/policy-reference/latency.md)
      * [Maven Archetype](create-and-configure-apis/apply-policies/policy-reference/maven-archetype.md)
      * [Message Filtering](create-and-configure-apis/apply-policies/policy-reference/message-filtering.md)
      * [Metrics Reporter](create-and-configure-apis/apply-policies/policy-reference/metrics-reporter.md)
      * [Mock](create-and-configure-apis/apply-policies/policy-reference/mock.md)
      * [mTLS](create-and-configure-apis/apply-policies/policy-reference/mtls.md)
      * [OAS Validation](create-and-configure-apis/apply-policies/policy-reference/oas-validation.md)
      * [OAuth2](create-and-configure-apis/apply-policies/policy-reference/oauth2/README.md)
        * [Generic OAuth2 Authorization Server](create-and-configure-apis/apply-policies/policy-reference/oauth2/generic-oauth2-authorization-server.md)
        * [Gravitee.io AM Authorization Server](create-and-configure-apis/apply-policies/policy-reference/oauth2/gravitee.io-am-authorization-server.md)
      * [OpenID Connect UserInfo](create-and-configure-apis/apply-policies/policy-reference/openid-connect-userinfo.md)
      * [Override HTTP Method](create-and-configure-apis/apply-policies/policy-reference/override-http-method.md)
      * [PII Filtering](create-and-configure-apis/apply-policies/policy-reference/pii-filtering.md)
      * [Protobuf to JSON](create-and-configure-apis/apply-policies/policy-reference/protobuf-to-json.md)
      * [Rate Limit](create-and-configure-apis/apply-policies/policy-reference/rate-limit.md)
      * [Regex Threat Protection](create-and-configure-apis/apply-policies/policy-reference/regex-threat-protection.md)
      * [Request Content Limit](create-and-configure-apis/apply-policies/policy-reference/request-content-limit.md)
      * [Request Validation](create-and-configure-apis/apply-policies/policy-reference/request-validation.md)
      * [Resource Filtering](create-and-configure-apis/apply-policies/policy-reference/resource-filtering.md)
      * [REST to SOAP](create-and-configure-apis/apply-policies/policy-reference/rest-to-soap.md)
      * [Retry](create-and-configure-apis/apply-policies/policy-reference/retry.md)
      * [Role-based Access Control (RBAC)](create-and-configure-apis/apply-policies/policy-reference/role-based-access-control-rbac.md)
      * [SSL Enforcement](create-and-configure-apis/apply-policies/policy-reference/ssl-enforcement.md)
      * [Status Code Transformation](create-and-configure-apis/apply-policies/policy-reference/status-code-transformation.md)
      * [Template](create-and-configure-apis/apply-policies/policy-reference/template.md)
      * [Traffic Shadowing](create-and-configure-apis/apply-policies/policy-reference/traffic-shadowing.md)
      * [Transform Headers](create-and-configure-apis/apply-policies/policy-reference/transform-headers.md)
      * [Transform Query Parameters](create-and-configure-apis/apply-policies/policy-reference/transform-query-parameters.md)
      * [URL Rewriting](create-and-configure-apis/apply-policies/policy-reference/url-rewriting.md)
      * [WS Security Authentication](create-and-configure-apis/apply-policies/policy-reference/ws-security-authentication.md)
      * [WS Security Sign](create-and-configure-apis/apply-policies/policy-reference/ws-security-sign.md)
      * [XML to JSON](create-and-configure-apis/apply-policies/policy-reference/xml-to-json.md)
      * [XML Threat Protection](create-and-configure-apis/apply-policies/policy-reference/xml-threat-protection.md)
      * [XML Validation](create-and-configure-apis/apply-policies/policy-reference/xml-validation.md)
      * [XSLT](create-and-configure-apis/apply-policies/policy-reference/xslt.md)
      * [Webhook Signature Generator](create-and-configure-apis/apply-policies/policy-reference/webhook-signature-generator.md)
* [Secure & Expose APIs](secure-and-expose-apis/README.md)
  * [Plans](secure-and-expose-apis/plans/README.md)
    * [Keyless](secure-and-expose-apis/plans/keyless.md)
    * [API Key](secure-and-expose-apis/plans/api-key.md)
    * [OAuth2](secure-and-expose-apis/plans/oauth2.md)
    * [JWT](secure-and-expose-apis/plans/jwt.md)
    * [Push](secure-and-expose-apis/plans/push.md)
    * [mTLS](secure-and-expose-apis/plans/mtls.md)
  * [Applications](secure-and-expose-apis/applications/README.md)
    * [Create an Application](secure-and-expose-apis/applications/create-an-application.md)
    * [Global Settings](secure-and-expose-apis/applications/global-settings.md)
    * [mTLS certificate management for applications](secure-and-expose-apis/applications/mtls-certificate-management-for-applications-overview-and-concepts.md)
    * [User and Group Access](secure-and-expose-apis/applications/user-and-group-access.md)
  * [Subscriptions](secure-and-expose-apis/subscriptions/README.md)
    * [Creating and managing subscription forms](secure-and-expose-apis/subscriptions/creating-and-managing-subscription-forms.md)
    * [Subscription form feature overview](secure-and-expose-apis/subscriptions/subscription-form-feature-overview.md)
    * [Subscription Requests](secure-and-expose-apis/subscriptions/subscription-requests.md)
    * [Manage Subscriptions](secure-and-expose-apis/subscriptions/manage-subscriptions.md)
    * [Transfer Subscriptions](secure-and-expose-apis/subscriptions/transfer-subscriptions.md)
  * [API Products overview and concepts](secure-and-expose-apis/api-products/README.md)
    * [API Products console UI reference](secure-and-expose-apis/api-products/console-ui-reference.md)
    * [API Products restrictions and licensing](secure-and-expose-apis/api-products/restrictions-and-licensing.md)
    * [Consuming APIs via API Products](secure-and-expose-apis/api-products/consuming-api-products.md)
    * [Managing API Products via Management API](secure-and-expose-apis/api-products/manage-api-products-via-management-api.md)
  * [API Products configuration reference](secure-and-expose-apis/api-products-configuration-reference.md)
* [Developer Portal](developer-portal/README.md)
  * [New Developer Portal](developer-portal/new-developer-portal/README.md)
    * [Catalog](developer-portal/new-developer-portal/catalog.md)
    * [Configure mTLS certificate management (administrator guide)](developer-portal/new-developer-portal/configuring-mtls-certificate-management-administrator-guide.md)
    * [Create an Application](developer-portal/new-developer-portal/create-an-application.md)
    * [Create and manage mTLS certificates (application owner guide)](developer-portal/new-developer-portal/creating-and-managing-mtls-certificates-application-owner-guide.md)
    * [Enable the New Developer Portal](developer-portal/new-developer-portal/configure-the-new-portal.md)
    * [Layout and Theme](developer-portal/new-developer-portal/layout-and-theme.md)
    * [Customize the Homepage](developer-portal/new-developer-portal/customize-the-homepage.md)
    * [Manage Portal Navigation and APIs](developer-portal/new-developer-portal/customize-the-navigation/README.md)
      * [Structure the navigation with the Management API](developer-portal/new-developer-portal/customize-the-navigation/structure-the-navigation-with-the-management-api.md)
    * [Gravitee Markdown Components](developer-portal/new-developer-portal/gravitee-markdown-components.md)
    * [Application Logs](developer-portal/new-developer-portal/application-logs.md)
    * [Manage Subscriptions](developer-portal/new-developer-portal/manage-subscriptions.md)
    * [Configure Webhook Subscriptions](developer-portal/new-developer-portal/configure-webhook-subscriptions.md)
    * [Configure Authentication](developer-portal/new-developer-portal/configure-authentication/README.md)
      * [Configure Authentication with Login and Password](developer-portal/new-developer-portal/configure-authentication/configure-authentication-with-login-and-password.md)
      * [Configure Authentication with SSO](developer-portal/new-developer-portal/configure-authentication/configure-authentication-with-sso.md)
      * [Enforce User Authentication](developer-portal/new-developer-portal/configure-authentication/enforce-user-authentication.md)
    * [Subscription form technical implementation](developer-portal/new-developer-portal/subscription-form-technical-implementation.md)
  * [Classic Developer Portal](developer-portal/classic-developer-portal/README.md)
    * [Configuration File](developer-portal/classic-developer-portal/configuration-file.md)
    * [Portal Settings](developer-portal/classic-developer-portal/portal-settings.md)
    * [Layout and Theme](developer-portal/classic-developer-portal/layout-and-theme.md)
    * [Manage Users](developer-portal/classic-developer-portal/manage-users.md)
    * [Webhook Subscriptions](developer-portal/classic-developer-portal/webhook-subscriptions.md)
    * [Create an Application](developer-portal/classic-developer-portal/create-an-application.md)
    * [API Documentation](developer-portal/classic-developer-portal/api-documentation.md)
* [Govern APIs](govern-apis/README.md)
  * [Federation](govern-apis/federation/README.md)
    * [Integrations](govern-apis/federation/integrations.md)
    * [Discovery](govern-apis/federation/discovery.md)
    * [Federated APIs](govern-apis/federation/federated-apis.md)
    * [Federation Agent Service Account](govern-apis/federation/federation-agent-service-account.md)
    * [3rd-Party Providers](govern-apis/federation/3rd-party-providers/README.md)
      * [Apigee X](govern-apis/federation/3rd-party-providers/apigee-x.md)
      * [AWS API Gateway](govern-apis/federation/3rd-party-providers/aws-api-gateway/README.md)
        * [Multi-Account and Multi-Region AWS API Gateway Federation](govern-apis/federation/3rd-party-providers/aws-api-gateway/multi-account-and-multi-region-aws-api-gateway-federation.md)
        * [AWS IAM Role-Based Authentication](govern-apis/federation/3rd-party-providers/aws-api-gateway/aws-iam-role-based-authentication.md)
      * [Azure API Management](govern-apis/federation/3rd-party-providers/azure-api-management.md)
      * [Confluent Platform](govern-apis/federation/3rd-party-providers/confluent-platform.md)
      * [IBM API Connect](govern-apis/federation/3rd-party-providers/ibm-api-connect.md)
      * [Mulesoft Anypoint](govern-apis/federation/3rd-party-providers/mulesoft-anypoint.md)
      * [Solace](govern-apis/federation/3rd-party-providers/solace.md)
      * [Edge Stack](govern-apis/federation/3rd-party-providers/edge-stack.md)
  * [API Score](govern-apis/api-score/README.md)
    * [Enable API Score](govern-apis/api-score/enable-api-score.md)
    * [View API Scores](govern-apis/api-score/view-api-scores.md)
    * [Rulesets and Functions](govern-apis/api-score/rulesets-and-functions.md)
    * [Types of Assets](govern-apis/api-score/types-of-assets.md)
    * [Generate an API Score](govern-apis/api-score/generate-an-api-score.md)
* [Analyze & Monitor APIs](analyze-and-monitor-apis/README.md)
  * [Dashboards](analyze-and-monitor-apis/dashboards/README.md)
    * [Overview dashboard](analyze-and-monitor-apis/dashboards/overview-dashboard.md)
    * [V4 Proxy API traffic dashboard](analyze-and-monitor-apis/dashboards/api-proxy-dashboard.md)
    * [V4 API analytics dashboard](analyze-and-monitor-apis/dashboards/v4-api-analytics-dashboard.md)
    * [V2 API analytics dashboards](analyze-and-monitor-apis/dashboards/v2-api-analytics-dashboards.md)
    * [LLM Usage Dashboard](analyze-and-monitor-apis/dashboards/LLM-usage-dashboard.md)
    * [MCP Usage Dashboard](analyze-and-monitor-apis/dashboards/MCP-usage-dashboard.md)
  * [API Quality](analyze-and-monitor-apis/api-quality.md)
  * [Audit Trail](analyze-and-monitor-apis/audit-trail.md)
  * [Reporters](analyze-and-monitor-apis/reporters/README.md)
    * [Elasticsearch Reporter](analyze-and-monitor-apis/reporters/elasticsearch-reporter.md)
    * [File Reporter](analyze-and-monitor-apis/reporters/file-reporter.md)
    * [TCP Reporter](analyze-and-monitor-apis/reporters/tcp-reporter.md)
    * [Datadog Reporter](analyze-and-monitor-apis/reporters/datadog-reporter.md)
  * [Logging](analyze-and-monitor-apis/logging/README.md)
    * [Configure Gateway-level Logs](analyze-and-monitor-apis/logging/configure-gateway-level-logs.md)
    * [Configure API-level Logs](analyze-and-monitor-apis/logging/configure-api-level-logs.md)
    * [Configure Environment-level Logs](analyze-and-monitor-apis/logging/configure-environment-level-logs.md)
    * [View API Logs](analyze-and-monitor-apis/logging/view-api-logs.md)
    * [Expose Metrics to Prometheus](analyze-and-monitor-apis/logging/expose-metrics-to-prometheus.md)
  * [OpenTelemetry](analyze-and-monitor-apis/opentelemetry.md)
  * [Execution Transparency Analytics](analyze-and-monitor-apis/execution-transparency-analytics.md)
* [Alert Engine](alert-engine/README.md)
  * [Architecture](alert-engine/overview/architecture.md)
  * [Integrations](alert-engine/overview/integrations.md)
  * [Install and Upgrade](alert-engine/getting-started/install-and-upgrade-guides/README.md)
    * [Sizing requirements](alert-engine/getting-started/install-and-upgrade-guides/sizing-requirements.md)
    * [Install via .ZIP file](alert-engine/getting-started/install-and-upgrade-guides/install-via-.zip-file.md)
    * [Install via Docker](alert-engine/getting-started/install-and-upgrade-guides/install-via-docker.md)
    * [Install via Kubernetes](alert-engine/getting-started/install-and-upgrade-guides/install-via-kubernetes.md)
    * [Upgrade guide](alert-engine/getting-started/install-and-upgrade-guides/upgrade-guide.md)
  * [Configuration](alert-engine/getting-started/configuration/README.md)
    * [Configure Alert Engine](alert-engine/getting-started/configuration/configure-alert-engine.md)
    * [Configure the Internal API](alert-engine/getting-started/configuration/configure-the-internal-api.md)
  * [Alerts and Conditions](alert-engine/guides/alerts-and-conditions.md)
  * [Dampening](alert-engine/guides/dampening.md)
  * [Notifications](alert-engine/guides/notifications.md)
  * [Integration set up](alert-engine/guides/integration-set-up/README.md)
    * [Gravitee API Management](alert-engine/guides/integration-set-up/gravitee-api-management/README.md)
      * [Installation](alert-engine/guides/integration-set-up/gravitee-api-management/installation.md)
      * [Configure Alerts in Gravitee API Management](configure-and-manage-the-platform/gravitee-gateway/alerts.md)
      * [Configure Notifications](alert-engine/guides/integration-set-up/gravitee-api-management/configure-notifications.md)
      * [Gravitee API Management Alerts Dashboard](alert-engine/guides/integration-set-up/gravitee-api-management/gravitee-api-management-alerts-dashboard.md)
    * [Gravitee Access Management](alert-engine/guides/integration-set-up/gravitee-access-management.md)
      * [Installation](alert-engine/guides/integration-set-up/gravitee-access-management/installation.md)
      * [Configuration](alert-engine/guides/integration-set-up/gravitee-access-management/configuration.md)
    * [Third Party Integrations](alert-engine/overview/integrations.md#integrating-with-third-party-solutions)
  * [API reference](https://raw.githubusercontent.com/gravitee-io/gravitee-docs/master/ae/spec/2.0/alert-engine-spec.yml)
  * [Azure regions for SaaS and Hybrid Deployments](alert-engine/reference/azure-regions-for-saas-and-hybrid-deployments.md)
  * [Changelog](alert-engine/releases-and-changelog/page-6.md)
* [AI Agent Management](ai-agent-management/README.md)
  * [Set Up an AI Agent (A2A) Proxy](ai-agent-management/create-an-a2a-proxy.md)
  * [Discover and Catalog AI Agents (A2A)](ai-agent-management/add-agents-to-your-agent-catalog.md)
  * [Convert REST APIS to an MCP Server](ai-agent-management/convert-your-apis-to-mcp-servers.md)
  * [LLM proxy](ai-agent-management/llm-proxy/README.md)
    * [Proxy your LLMs](ai-agent-management/llm-proxy/proxy-your-llms.md)
    * [Accepted request formats](ai-agent-management/llm-proxy/accepted-request-formats.md)
    * [Add the Token Rate Limit policy to your LLM proxy](ai-agent-management/llm-proxy/add-the-token-rate-limit-policy-to-your-llm-proxy.md)
    * [Add the Guard Rails policy to your LLM proxy](ai-agent-management/llm-proxy/add-the-guard-rails-policy-to-your-llm-proxy.md)
    * [Consume your LLM proxy with the OpenAI Python SDK](ai-agent-management/llm-proxy/consume-your-llm-proxy-with-the-openai-python-sdk.md)
  * [Secure MCP Proxy with OAuth2](ai-agent-management/secure-mcp-proxy-with-oauth2.md)
  * [AI Resources](ai-agent-management/AI-resources/README.md)
    * [AI - Model Text Classification - Overview and Model Selection](ai-agent-management/AI-resources/ai-model-text-classification-overview-and-model-selection.md)
    * [AI - Model Text Classification - Configuration and Usage](ai-agent-management/AI-resources/ai-model-text-classification-configuration-and-usage.md)
* [Terraform](terraform/README.md)
  * [Quick Start Guide](terraform/quick-start-guide.md)
  * [Define an APIM service account for Terraform](terraform/define-an-apim-service-account-for-terraform.md)
  * [Gravitee Resources](terraform/example-resource-configurations.md)
* [Kafka Gateway](kafka-gateway/README.md)
  * [Configure the Kafka Client & Gateway](kafka-gateway/configure-the-kafka-client-and-gateway.md)
  * [Deploy a Kafka Gateway with Gravitee Cloud](kafka-gateway/deploy-a-kafka-gateway-with-gravitee-cloud.md)
  * [Produce and Consume Kafka Messages with Gravitee Cloud](kafka-gateway/produce-and-consume-kafka-messages-with-gravitee-cloud.md)
  * [Create & Configure Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/README.md)
    * [Create Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/create-kafka-apis.md)
    * [Configure Kafka APIs](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/README.md)
      * [Configuration](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/configuration.md)
      * [Entrypoint Connect phase](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/entrypoint-connect-phase.md)
      * [Connection interruption in Entrypoint Connect phase](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/connection-interruption.md)
      * [Console UI changes for multi-tenant Kafka endpoints](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/console_ui_changes_for_multi-tenant_kafka_endpoints.md)
      * [Entrypoints](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/entrypoints.md)
      * [Endpoints](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/endpoints.md)
      * [mTLS plans for Kafka native APIs](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/mtls-plans.md)
      * [Policies](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/policies.md)
      * [Consumers](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/consumers.md)
      * [Documentation](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/documentation.md)
      * [Deployment](kafka-gateway/create-and-configure-kafka-apis/configure-kafka-apis/deployment.md)
  * [Create and Configure Kafka Clusters](kafka-gateway/create-and-configure-kafka-clusters.md)
  * [Configure and Deploy Kafka Console](kafka-gateway/configure-and-deploy-kafka-console.md)
  * [Plans](kafka-gateway/plans.md)
  * [Applications](kafka-gateway/applications.md)
  * [Subscriptions](kafka-gateway/subscriptions.md)
  * [Other Ways Gravitee Supports Kafka](kafka-gateway/other-ways-gravitee-supports-kafka.md)
  * [Expose Metrics to Prometheus](kafka-gateway/expose-metrics-to-prometheus.md)
  * [Expose Metrics to Elasticsearch](kafka-gateway/expose-metrics-to-elasticsearch.md)
* [Prepare a Production Environment](prepare-a-production-environment/README.md)
  * [Gateway Resource Sizing](prepare-a-production-environment/gateway-resource-sizing-guidelines.md)
  * [Production Best Practices](prepare-a-production-environment/production-best-practices/README.md)
    * [Internal APIs](prepare-a-production-environment/production-best-practices/internal-apis.md)
    * [Deployments](prepare-a-production-environment/production-best-practices/deployments.md)
    * [Authentication](prepare-a-production-environment/production-best-practices/authentication.md)
    * [Protections](prepare-a-production-environment/production-best-practices/protections.md)
    * [General Recommendations](prepare-a-production-environment/production-best-practices/general-recommendations/README.md)
      * [Default APIM Settings](prepare-a-production-environment/production-best-practices/general-recommendations/default-apim-settings.md)
      * [API Design](prepare-a-production-environment/production-best-practices/general-recommendations/api-design.md)
      * [API Review and Quality](prepare-a-production-environment/production-best-practices/general-recommendations/api-review-and-quality.md)
      * [Property Encryption](prepare-a-production-environment/production-best-practices/general-recommendations/property-encryption.md)
      * [Documentation Sanitizer](prepare-a-production-environment/production-best-practices/general-recommendations/documentation-sanitizer.md)
      * [Notifiers](prepare-a-production-environment/production-best-practices/general-recommendations/notifiers.md)
      * [Default Nginx Security Config](prepare-a-production-environment/production-best-practices/general-recommendations/default-nginx-security-config.md)
  * [Cache](prepare-a-production-environment/cache.md)
  * [Repositories](prepare-a-production-environment/repositories/README.md)
    * [MongoDB](prepare-a-production-environment/repositories/mongodb.md)
    * [ElasticSearch](prepare-a-production-environment/repositories/elasticsearch.md)
    * [JDBC](prepare-a-production-environment/repositories/jdbc.md)
    * [Redis](prepare-a-production-environment/repositories/redis.md)
  * [Configure your HTTP Server](prepare-a-production-environment/configure-your-http-server.md)
  * [Sensitive Data Management](prepare-a-production-environment/sensitive-data-management/README.md)
    * [Configure Secrets](prepare-a-production-environment/sensitive-data-management/configure-secrets/README.md)
      * [Quick Start](prepare-a-production-environment/sensitive-data-management/configure-secrets/quick-start.md)
      * [Configuration](prepare-a-production-environment/sensitive-data-management/configure-secrets/configuration.md)
      * [Reference Secrets in Configurations](prepare-a-production-environment/sensitive-data-management/configure-secrets/reference-secrets-in-configurations.md)
    * [API Secrets](prepare-a-production-environment/sensitive-data-management/api-secrets/README.md)
      * [Quick Start](prepare-a-production-environment/sensitive-data-management/api-secrets/quick-start.md)
      * [Configuration](prepare-a-production-environment/sensitive-data-management/api-secrets/configuration.md)
      * [Reference Secrets in APIs](prepare-a-production-environment/sensitive-data-management/api-secrets/reference-secrets-in-apis.md)
    * [Plugin support](prepare-a-production-environment/sensitive-data-management/plugin-support.md)
* [Plugins](plugins/README.md)
  * [Plugin Reference](plugins/plugin-reference.md)
  * [Deployment](plugins/deployment.md)
  * [Customization](plugins/customization/README.md)
    * [Context-Aware Logging in Plugins](plugins/customization/context-aware-logging.md)
    * [Policies for the Entrypoint Connect phase](plugins/customization/entrypoint-connect-phase-policies.md)
    * [Enforce Logging Rules with ArchUnit Maven Plugin](plugins/customization/archunit-maven-plugin.md)
* [Gravitee Expression Language](gravitee-expression-language.md)
* [Management API Reference](management-api-reference.md)
* [Expose APIM as an MCP Server](expose-apim-as-an-mcp-server.md)
* [Release Information](release-information/README.md)
  * [Release Notes](release-information/release-notes/README.md)
    * [APIM 4.11](release-information/release-notes/apim-4.11.md)
    * [APIM 4.10](https://documentation.gravitee.io/apim/release-information/release-notes/apim-4.10)
    * [APIM 4.9](https://documentation.gravitee.io/apim/4.9/release-information/release-notes/apim-4.9)
    * [APIM 4.8](https://documentation.gravitee.io/apim/4.8/release-information/release-notes/apim-4.8)
    * [APIM 4.7](https://documentation.gravitee.io/apim/4.7/overview/release-notes/apim-4.7)
    * [APIM 4.6](https://documentation.gravitee.io/apim/overview/release-notes/apim-4.6)
    * [APIM 4.5](https://documentation.gravitee.io/apim/4.5/overview/release-notes/apim-4.5)
    * [APIM 4.4](https://documentation.gravitee.io/apim/4.4/overview/release-notes/apim-4.4)
    * [APIM 4.3](https://documentation.gravitee.io/apim/4.3/overview/release-notes/apim-4.3)
    * [APIM 4.2](https://documentation.gravitee.io/apim/4.2/overview/release-notes/apim-4.2)
    * [APIM 4.1](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/release-notes/apim-4.1)
    * [APIM 4.0](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/release-notes/apim-4.0)
  * [Changelog](release-information/changelog/README.md)
    * [APIM 4.11.x](release-information/changelog/apim-4.11.x.md)
    * [APIM 4.10.x](https://app.gitbook.com/s/bGmDEarvnV52XdcOiV8o/release-information/changelog/apim-4.10.x)
    * [APIM 4.9.x](https://documentation.gravitee.io/apim/4.9/release-information/changelog/apim-4.9.x)
    * [APIM 4.8.x](https://documentation.gravitee.io/apim/4.8/release-information/changelog/apim-4.8.x)
    * [APIM 4.7.x](https://documentation.gravitee.io/apim/4.7/overview/changelog/apim-4.7.x)
    * [APIM 4.6.x](https://documentation.gravitee.io/apim/4.6/overview/changelog/apim-4.6.x)
    * [APIM 4.5.x](https://documentation.gravitee.io/apim/4.5/overview/changelog/apim-4.5.x)
    * [APIM 4.4.x](https://documentation.gravitee.io/apim/4.4/overview/release-notes/apim-4.4)
    * [APIM 4.3.x](https://documentation.gravitee.io/apim/4.3/releases-and-changelog/changelog/apim-4.3.x)
    * [APIM 4.2.x](https://documentation.gravitee.io/apim/4.2/overview/changelog/apim-4.2.x)
    * [APIM 4.1.x](https://documentation.gravitee.io/apim/4.1/releases-and-changelog/changelogs/apim-4.1.x-changelog)
    * [APIM 4.0.x](https://documentation.gravitee.io/apim/4.0/releases-and-changelog/changelog/apim-4.0.x)
  * [Breaking Changes and Deprecations](release-information/breaking-changes-and-deprecations.md)
  * [Release Types](release-information/release-types.md)
  * [Release schedule](release-information/release-schedule.md)
  * [Support Model](release-information/support-model.md)
    * [Support for v1 APIs](release-information/support-for-v1-apis.md)
